// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/channel_notifications_modal/ExtraInfo should match snapshot, on DESKTOP 1`] = `
<div
  className="SectionTitle__wrapper"
>
  <MemoizedFormattedMessage
    defaultMessage="Desktop notifications"
    id="channel_notifications.desktopNotifications"
  />
</div>
`;

exports[`components/channel_notifications_modal/ExtraInfo should match snapshot, on MARK_UNREAD 1`] = `
<MemoizedFormattedMessage
  defaultMessage="Mute Channel"
  id="channel_notifications.muteChannel.settings"
/>
`;

exports[`components/channel_notifications_modal/ExtraInfo should match snapshot, on PUSH 1`] = `
<div
  className="SectionTitle__wrapper"
>
  <MemoizedFormattedMessage
    defaultMessage="Mobile push notifications"
    id="channel_notifications.push"
  />
</div>
`;
